# books

./: Cargo.toml  documentation.apib
sql/: database.sql  sample_data.sql
src/: jsonapi.rs  main.rs
src/books/: mod.rs
src/categories/: mod.rs
src/iron_helpers/: mod.rs
